--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h2>
                     Classes
                 </h2>
-                <ul>
-                    <li>r</li>
+                <ul id="classList">
+                    <!-- <li>r</li>
                     <li>wf</li>
-                    <li>gwrfw</li>
+                    <li>gwrfw</li> -->
                 </ul>
             </div>
             <div class="nav_namelist">
@@ -29,6 +29,8 @@
                 </h2>
                 <ul>
                     <li>r</li>
+                    <li>wf</li>
+                    <li>gwrfw</li>
                     <li>wf</li>
                     <li>gwrfw</li>
                 </ul>
@@ -82,6 +84,7 @@
         </div>
         
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
