clicks on classes are done

--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
                 <h2>
                     Studs
                 </h2>
-                <ul>
-                    <li>r</li>
-                    <li>wf</li>
-                    <li>gwrfw</li>
-                    <li>wf</li>
-                    <li>gwrfw</li>
+                <ul id="studsOfClass">
+                    
                 </ul>
             </div>
         </div>
