save and cancel tested
save and cancel tested without the selected student.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </fieldset>
                 <label for="grade">Grade</label>
                 <select name="grade" id="selectGrade">
-                    <option value="selectGrade">Select a grade!</option>
+                    <option value="selectAGrade">Select a grade!</option>
                     <option value="five">5</option>
                     <option value="four">4</option>
                     <option value="three">3</option>
