last grade visible

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                     <div class="gradeSector">
                         <div class="lastGrade">
                             <h4 id="last_grade_1" class="lastGradeTitle">Last grade</h4>
-                            <h3>5</h3>
+                            <h3 class="lastGradeValue">5</h3>
                         </div>
                         <div class="averageGrade">
                             <h4 id="average_grade_1" class="averageGradeTitle">Average of grades</h4>
-                            <h3>4</h3>
+                            <h3 class="averageGradeValue">4</h3>
                         </div>
                     </div>
                     <div class="statSector">
