--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <label for="smallTestGrade">Small test</label>
                     <input type="radio" name="gradeTypes" id="smallTestGrade" onchange="valueChanged">
                     <label for="testGrade">Test</label>
-                    <input type="radio" name="gradeTypes" id="testGrade">
+                    <input type="radio" name="gradeTypes" id="testGrade" onchange="valueChanged">
                     <label for="majorTestGrade">Major test</label>
-                    <input type="radio" name="gradeTypes" id="majorTestGrade">
+                    <input type="radio" name="gradeTypes" id="majorTestGrade" onchange="valueChanged">
                 </fieldset>
                 <label for="grade">Grade</label>
                 <select name="grade" id="selectGrade">
