--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <label for="grade">Grade</label>
                 <select name="grade" id="selectGrade">
                     <option value="selectAGrade">Select a grade!</option>
-                    <option value="five">5</option>
-                    <option value="four">4</option>
-                    <option value="three">3</option>
-                    <option value="two">2</option>
-                    <option value="one">1</option>
+                    <option id="fiveGrade" value="5">5</option>
+                    <option id="fourGrade" value="4">4</option>
+                    <option id="threeGrade" value="3">3</option>
+                    <option id="twoGrade" value="2">2</option>
+                    <option id="oneGrade" value="1">1</option>
                 </select>
                 <button id="saveBtn">Save</button>
                 <button id="cancelBtn"> Cancel</button>
